Added castling, en pessant and promotion to queen functionality

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,6 +9,7 @@
     <h2>Chess when everyone but the King is too drunk to remember their names</h2>
     <div class="container" id="board-container">
     </div>
+    <script src="../js/chess.js/chess.js"></script>
     <script src="../js/index.js"></script>
 </body>
 </html>
